--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <link href="/public/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
@@ -29,9 +29,10 @@
 </nav>
 <div ng-view></div>
 </body>
-<script src="/public/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
-<script src="/public/lib/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/public/lib/angular/angular.min.js" type="text/javascript"></script>
-<script src="/public/lib/angular-route/angular-route.js" type="text/javascript"></script>
-<script src="/public/javascripts/app.js" type="text/javascript"></script>
+<script src="public/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
+<script src="public/lib/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="public/lib/angular/angular.min.js" type="text/javascript"></script>
+<script src="public/lib/angular-route/angular-route.js" type="text/javascript"></script>
+<script src="public/javascripts/app.js" type="text/javascript"></script>
+<script src="public/javascripts/controller.js" type="text/javascript"></script>
 </html>
