--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,1 +1,5 @@
-<div>home</div>
+<div class="container">
+    <div class="panel panel-default">
+        <div class="panel-heading">欢迎你的到来</div>
+    </div>
+</div>
