--- a/app/pages/user/login.html
+++ b/app/pages/user/login.html
@@ -49,7 +49,7 @@
 
             <div class="panel-footer clearfix">
                 <div class="col-sm-offset-5 col-sm-1 col-xs-offset-5  col-xs-1">
-                    <button type="submit" class="btn btn-lg btn-primary btn-enter"
+                    <button type="button" class="btn btn-lg btn-primary btn-enter"
                             data-ng-click="save()">
                         登录
                     </button>
